# dragonfly-website

./: .babelrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .stylelintrc  Dockerfile  DragonflyWeb.cabal  LICENSE  Makefile  README.md  README.md.md  README_MAC.md  build.sh  cabal.config  cabal.project  default.nix  divshot.json  docker-compose.yaml  dockertemplate  firebase.json  fonts.yaml  gorbachev.yaml  imagemin.js  magic-config.md  makefile  package-lock.json  package.json  postcss.config.js  postcss.config.prod.js  redirect.xml  redirects.csv  run.sh  serve.json  sync.sh  tailwind.config.js  task.sh  tsconfig.json  tslint.json  (+1 more)
.github/workflows/: actions.yml  stale.yml
NLP/: build.sh  gorbachev.yaml  rbol.r  tree-functions.r
NLP/news/: check-most-similars.r  current-project  main.r  makefile  prepare-data.r  project-config.r  project-functions.r
content/: Dockerfile  about.md  careers.md  data.md  index.md  news.md  people.md  preview.sh  publications  publications.md  vacancies.md  what-we-do.md  work.md
content/case-studies/: scallop-fishery.md  seabird-risk-assessment.md  warp-strike.md
content/data/: protected-species-captures.md  regional-economic-activity.md  regional-economic-activity.md~  seabird-counts.md  sealion-tag-resight.md
content/fonts/: dragonfly.css  dragonfly.eot
content/images/: 819829_-downloads-01CWNZS_NZS_1060.img.md  sealion-yawn-180x189.img.md
content/js/: _2column-grid.ts  app.js  app.ts  button-link.ts  filtering.ts  footer.ts  game-of-life.js  image-caption.ts  jarallax.d.ts  lazy-load.js  lazy-load.ts  mobile-menu.js  mobile-menu.ts  parallax.js  parallax.ts  publications.js  publications.ts  scroll-images.ts  sticky-sidebar.ts  top-section.js  top-section.ts
content/news/: 2010-12-01-common-dolphin-captures-report.md  2011-04-13-estimated-sea-lion-bycatch-2008-09.md  2011-08-10-seabirds-menu.md  2011-10-04-making-connections-japan.md  2011-11-02-seabird-estimation-report-published.md  2011-12-13-long-tail-science.md  2012-03-14-reducing-incidental-captures-seabirds-inshore-fish.md  2012-06-08-better-communication-design.md  2012-06-13-mapping-paua.md  2012-06-20-more-robins-released-near-eastbourne.md  2012-10-30-modelling-distribution-mauis-dolphin.md  2012-11-07-evidence-seabird-bycatch-discovered.md  2012-11-28-joel-pitt.md  2012-11-29-tom-mccowan.md  2013-02-01-welcome-chris-knox.md  2013-02-15-lunchtime-talks.md  2013-02-27-bycatch-data-goes-public.md  2013-04-29-resilience-of-fish-stocks.md  2013-08-01-taiaroa-head-colony-perfect-albatross-study.md  2013-08-07-podcast-bycatch-data-analysis.md  2013-09-11-inferring-animal-dispersal.md  2013-09-27-philipp-presenting-oxford-biodiversity-resilience-.md  2013-11-19-bbc-and-abc-come-town.md  2014-01-15-working-beach-summer.md  2014-02-14-dragonfly-featured-ABC-and-BBC.md  2014-06-11-regional-economic-activity-report-gets-interactive.md  2015-09-04-kokako-launch.md  2015-09-08-new-dragonfly-website.md  2015-09-28-douglas-bagnall-author-attribution.md  2015-09-29-predator-prey.md  2015-10-30-theos-eggs.md  2015-11-07-te-reo.md  2015-11-09-black-petrel.md  2015-12-14-cockle-pipi-surveys.md  2016-01-10-shellfish-surveys.md  2016-03-09-2015-march-gdp.md  2016-03-11-embed.md  2016-03-11-eresearch.md  2016-04-11-sample-smarter.md  2016-05-09-cadmium.md  (+7 more)
content/pages/: 404.html  404.md  blog.md  contact.md  data.md  news.md  people.md  publications.md  what-we-do.html  work.md
content/people/: abraham-edward.md  berkenbusch-katrin.md  knox-christopher.md  mansfield-richard.md  neubauer-philipp.md  pierre-johanna.md~  richard-yvan.md  thompson-finlay.md
content/posts/: 2010-12-01-common-dolphin-captures-report.md  2011-04-13-estimated-sea-lion-bycatch-2008-09.md  2011-08-10-seabirds-menu.md  2011-10-04-making-connections-japan.md  2011-11-02-seabird-estimation-report-published.md  2011-12-13-long-tail-science.md  2012-02-01-johanna-pierre-joins-dragonfly-science.md  2012-03-14-reducing-incidental-captures-seabirds-inshore-fish.md  2012-06-05-counting-kiwis.md  2012-06-08-better-communication-design.md  2012-06-13-mapping-paua.md  2012-06-20-more-robins-released-near-eastbourne.md  2012-07-18-richard-mansfield.md  2012-10-30-modelling-distribution-mauis-dolphin.md  2012-11-07-evidence-seabird-bycatch-discovered.md  2012-11-28-joel-pitt.md  (+15 more)
dfweb_docker/haskell-build/: Dockerfile  DragonflyWeb.cabal  Makefile  build.sh  cabal.config
docs/: css.md  js.md
front-end/: .babelrc  .dockerignore  .eslintrc.json  .prettierrc  .stylelintrc  .unimportedrc.json  Dockerfile  fonts.yaml  imagemin.js  makefile  package-lock.json  package.json  postcss.config.js  serve.json  tailwind.config.js  tsconfig.json  tslint.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.images.js  webpack.prod.js
haskell/: Site.hs  cabal.config  dragonfly-website.cabal  release.md  stack.yaml
haskell/WebSite/: About.hs  Bibliography.hs  Blog.hs  Careers.hs  Collection.hs  Compilers.hs  Config.hs  Context.hs  Data.hs  Images.hs  News.hs  People.hs  Publications.hs  Resources.hs  SiteMap.hs  Testimonials.hs  Util.hs  Vacancies.hs  Validate.hs  WhatWeDo.hs  Work.hs
haskell/WebSite/DomUtil/: Images.hs
www.dragonfly.co.nz/: about.html  case-studies.html  contact.html  data.html  index.html  johanna-pierre.html  people.html  posts  publications.html  scallop-fishery.html  seabird-risk-assessment.html  warp-strike.html  yvan-richard-dispersal-choice-analysis.html  yvan-richard-ifpc.html  yvan-richard-sexibam.html
(+1152 files in other folders)
