name:                dragonfly-website
version:             0.1.0.0
synopsis:            Dragonfly website site generator
-- description:         
homepage:            http://dragonfly.co.nz
author:              Chris Knox
maintainer:          chris@dragonfly.co.nz
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable website
  main-is:             Site.hs
  other-modules:       WebSite.Validate
                     , WebSite.Bibliography
                     , WebSite.Collection
                     , WebSite.Compilers
                     , WebSite.Config
                     , WebSite.Context
                     , WebSite.Data
                     , WebSite.Images
                     , WebSite.News
                     , WebSite.People
                     , WebSite.Publications
                     , WebSite.Work
                     , WebSite.Util
  other-extensions:    OverloadedStrings, RecordWildCards, TupleSections, QuasiQuotes
  build-depends:       base
                     , aeson
                     , directory
                     , filepath
                     , containers
                     , unordered-containers
                     , text
                     , pandoc
                     , pandoc-citeproc
                     , hamlet
                     , hakyll
                     , data-default
                     , pandoc-types
                     , utf8-string
                     , blaze-html
                     , shakespeare
                     , xml-conduit
                     , xml-hamlet
                     , html-conduit
                     , time
                     , time-locale-compat
                     , monads-tf
                     , mtl
                     , hxt
                     , xml-conduit
                     , xml-hamlet
                     , html-conduit
                     , blaze-html
                     , process
  -- hs-source-dirs:      
  default-language:    Haskell2010
